--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Un logo en forme de chouette suivi d'un texte ( la chouette agence )" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence 2.png" alt="Un logo en forme de chouette suivi d'un texte ( la chouette agence )" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -54,7 +54,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="un logo en forme de chouette" /> 
+				<img src="img/logo 2.png" class="center-block image-resize-mode" width="100" alt="un logo en forme de chouette" /> 
 				<h1 class="text-center hero-bloc-text tc-white ">La chouette agence.</h1>	
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -80,7 +80,7 @@
 					Web design
 				</h3>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -88,7 +88,7 @@
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
-					&nbsp;Stratégie
+					Stratégie
 				</h3>
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -109,6 +109,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<p>"La chouette agence est une exellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+				<span>Maxime Guibard, PDG de À vos fourchettes</span>
 			</div>
 		</div>
 	</div>
@@ -158,7 +159,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Un kit de photographe et un ordinateur portable ( Macbook )"/></a>
+				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpeg" class="img-responsive portfolio-thumb" alt="Un kit de photographe et un ordinateur portable ( Macbook )"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -167,7 +168,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Un ordinateurportable avect des préparatif de mariage" /></a>
+				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpeg" class="img-responsive portfolio-thumb" alt="Un ordinateurportable avect des préparatif de mariage" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
