--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,11 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence 2.png" alt="atlanta web design logo" height="40" /></a>
 			</div>
+			<ul class="site-navigation nav navbar-nav">
+				<li>
+					<a href="index.html">Accueil</a>
+				</li>
+			</ul>
 			
 		</nav>
 	</div>
