--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence 2.png" alt="atlanta web design logo" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence-2.png" alt="atlanta web design logo" height="40"/></a>
 			</div>
 			<ul class="site-navigation nav navbar-nav">
 				<li>
@@ -48,7 +48,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
-<div class="bloc  bg-repeat bgc-atomic-tangerine d-bloc id="bloc-6">
+<div class=" bloc bg-repeat bgc-atomic-tangerine d-bloc ">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
@@ -70,7 +70,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, désolé pour le désagrément !">
+				<form id="form_1">
 					<div class="form-group">
 						<label>
 							Nom :
@@ -87,7 +87,7 @@
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" required id="input_504" />
 					</div>
 					<div class="form-group">
 						<label>
