--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence 2.png" alt="Un logo en forme de chouette suivi d'un texte ( la chouette agence )" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence-2.png" alt="Un logo en forme de chouette suivi d'un texte ( la chouette agence )" height="40"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -50,8 +50,8 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo 2.png" class="center-block image-resize-mode" width="100" alt="un logo en forme de chouette" /> 
-				<h1 class="text-center hero-bloc-text tc-white ">La chouette agence.</h1>	
+				<img src="img/logo-2.png" class="center-block image-resize-mode" width="100" alt="un logo en forme de chouette" /> 
+				<h1 class="text-center hero-bloc-text tc-white">La chouette agence.</h1>	
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
