--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     
 	<script src="./js/jquery-2.1.0.js" defer></script>
 	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" defer></script>
+	<script src="./js/blocs.js" defer></script>
 	<script src="./js/jqBootstapeValidation.min.js" defer></script>
 	<script src="./js/formHandler.min.js" defer></script>
     <title>Contact</title>
