--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <body>
 <!-- Principal conteneur -->
 <div class="page-container">
-    
+<header>
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
@@ -58,8 +58,9 @@
 		</div>
 	</div>
 </div>
+</header>
 <!-- bloc-6 END -->
-
+<main>
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
@@ -107,7 +108,7 @@
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
-
+</main>
 <Footer>
 	<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 		<div class="container bloc-sm">
