--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <div class="page-container">
    
+<header>
 
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
@@ -45,7 +46,9 @@
 		</nav>
 	</div>
 </div>
+</header>
 
+<main>
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
@@ -188,6 +191,7 @@
 		</div>
 	</div>
 </div>
+</main>
 
 <Footer>
 	<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
