--- a/contact.html
+++ b/contact.html
@@ -120,22 +120,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://twitter.com/home" title="Twitter" target="_blank"> <span class="fa fa-twitter icon-md">Twitter</span></a>
+								<a class="social" href="https://twitter.com/home" title="Twitter" target="_blank"> <span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://www.facebook.com/" title="Facebook" target="_blank"> <span class="fa fa-facebook icon-md">Facebook</span></a>
+								<a class="social" href="https://www.facebook.com/" title="Facebook" target="_blank"> <span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://dribbble.com/" title="Dibbble" target="_blank"> <span class="fa fa-dribbble icon-md">Dibbble</span></a>
+								<a class="social" href="https://dribbble.com/" title="Dibbble" target="_blank"> <span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://www.instagram.com/" title="Instagram" target="_blank"> <span class="fa fa-instagram icon-md">Instagram</span></a>
+								<a class="social" href="https://www.instagram.com/" title="Instagram" target="_blank"> <span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 					</div>
