--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 
 		<div class="col-sm-6">
 			<p>
-				<a href="mailto:contact@lachouetteagence.com?subject=Contact%20depuis%20lachouetteagence.com">contact@lachouetteagence.com</a> <br>
+				<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a> <br>
 				2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 			</p>
 			</div>
